fixed template cloning & css syntax

--- a/homeworks/igor.doroshenko_igordordev/3-async/style.css
+++ b/homeworks/igor.doroshenko_igordordev/3-async/style.css
@@ -1,4 +1,6 @@
-.header-panel__title::first-letter, .article__title::first-letter, .article__content::first-letter {
+.header-panel__title::first-letter,
+.article__title::first-letter,
+.article__content::first-letter {
   color: #F00;
 }
 
