--- a/homeworks/roman.kushnirenko_skyprog/4-layouts/grid/style.css
+++ b/homeworks/roman.kushnirenko_skyprog/4-layouts/grid/style.css
@@ -3,8 +3,7 @@
   justify-content: center;
   grid-template-columns: 250px 400px 250px;
   grid-template-rows: 150px 500px 80px;
-  grid-template-areas:
-    "header header header"
+  grid-template-areas: "header header header"
     "sidel main sider"
     "footer footer footer";
 }
