--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/4-layouts/flexbox/style-flex.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/4-layouts/flexbox/style-flex.css
@@ -11,57 +11,39 @@ body {
   flex-direction: column;
 }
 
-.header {
-  min-height: 150px;
-  width: 100%;
-  background-color: #FD0909;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__title,
-.aside__left__title,
-.holder__section__title,
-.aside__right__title,
-.footer__title {
-  font-size: inherit;
-}
-
 .holder {
   flex-grow: 1;
   display: flex;
   justify-content: space-between;
 }
 
-.holder__aside__left {
-  background-color: #E37878;
-  width: 350px;
+.holder__box {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.holder__section {
+.holder__box--header {
+  min-height: 150px;
+  width: 100%;
+  background-color: #FD0909;
+}
+
+.holder__box--sidebar {
+  background-color: #E37878;
+  width: 350px;
+}
+
+.holder__box--section {
   width: 100%;
   background-color: #408EFF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.holder__aside__right {
-  background-color: #E37878;
-  width: 350px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
+.holder__box--footer {
   height: 100px;
   background-color: #FD0909;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+
+.box__title {
+  font-size: inherit;
 }
