--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/style.css
@@ -56,3 +56,31 @@ body {
   position: relative;
   left: 65%;
 }
+
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255, 255, 255);
+}
+.preloader.hide-preloader {
+  animation: hidePreloader 1s;
+}
+
+.preloader.preloader-hidden {
+  display: none;
+}
+
+@keyframes hidePreloader {
+  0% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+  }
+}
