--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/style.css
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/style.css
@@ -3,8 +3,9 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template: .3fr 1fr / 1fr;
+  row-gap: 30px;
   margin: auto;
   background-color: rgb(246,245,251);
   height: 80%;
@@ -13,48 +14,68 @@ body {
 }
 
 .header {
-  display: flex;
+  display: grid;
+  grid-template: 1fr / 60% 20% 20%;
   align-items: center;
   background-color: rgb(255,255,255);
-  height: 10%;
-  width: 100%;
-  margin-bottom: 40px;
   border-radius: 15px 15px 0 0;
   justify-content: left;
 }
 
 .main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  row-gap: 40px;
-  column-gap: 40px;
-  margin-bottom: 40px;
+  display: grid;
+  grid-template: .4fr .4fr / .4fr .4fr;
+  justify-content: space-around;
+  row-gap: 50px;
 }
 
 .article {
-  height: 40%;
-  width: 40%;
+  display: grid;
+  grid-template: .5fr 1.5fr / 1fr;
   background-color: rgb(255, 255, 255);
   text-align: left;
-  align-items: center;
-  padding: 15px;
   border-radius: 15px;
+  padding: 15px;
+}
+
+.title::first-letter {
+  color: rgb(255,114,112);
+  text-transform: uppercase;
+}
+
+.p::first-letter {
+  text-transform: uppercase;
 }
 
 .headerName {
   position: relative;
   left: 5%;
+  text-transform: uppercase;
 }
 
-.headerForm {
-  position: relative;
-  left: 60%;
+.headerName span {
+  color: rgb(255,114,112);
 }
 
-.headerFilter {
-  position: relative;
-  left: 65%;
+.headerSort {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  font-size: 1.2em;
+  cursor: default;
+}
+
+.headerSort select {
+  padding: 5px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.headerFilter input {
+  border-radius: 15px;
+  font-size: 1.2em;
+  max-width: 200px;
 }
 
 .preloader {
@@ -68,6 +89,7 @@ body {
   justify-content: center;
   background: rgb(255, 255, 255);
 }
+
 .preloader.hide-preloader {
   animation: hidePreloader 1s;
 }
@@ -77,10 +99,12 @@ body {
 }
 
 @keyframes hidePreloader {
+
   0% {
-      opacity: 1;
+    opacity: 1;
   }
+
   100% {
-      opacity: 0;
+    opacity: 0;
   }
 }
