--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/style.css
@@ -10,13 +10,16 @@ body {
 }
 
 .outer_shell {
-  width: 350px;
-  height: 500px;
+  margin-top: 15px;
+  width: 270px;
+  height: 430px;
   border: 2px solid #000;
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, .2);
 }
 
 .main__form_manipulation_calendar {
-  margin: 15px;
+  margin-top: 20px;
+  margin-left: 35px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
