--- a/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/style.css
@@ -1,4 +1,53 @@
 body {
   width: 75%;
   margin: auto;
+  background-color: #E1EDFB;
+}
+
+.main {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
+  background-color: #F7F6FB;
+  border-radius: 6px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, .5);
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+}
+
+.control {
+  margin: 10px 0;
+}
+
+.out-info {
+  min-height: 25px;
+}
+
+.data {
+  font-size: 1.6em;
+}
+
+.time-block__select {
+  width: 200px;
+  padding: 5px;
+  border: 2px solid #000;
+  border-radius: 6px;
+}
+
+.clock {
+  font-size: 1.6em;
+}
+
+.control-button {
+  width: 200px;
+  padding: 5px;
+  border: 2px solid #000;
+  border-radius: 6px;
+}
+
+.time-block__clock {
+  margin: 10px 0;
 }
