--- a/homeworks/nikolay.krasniuk_Kingstar22/4-modules/style.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/4-modules/style.css
@@ -5,41 +5,47 @@
 }
 
 body {
-  background: rgba(150, 160, 108, .25);
+  background: #E1EEF3
 }
 
 .times {
   display: flex;
   flex-direction: column;
   margin: 60px auto;
-  max-width: 50%;
-  padding: 15px;
-  border: 1px solid rgb(0, 0, 0);
+  max-width: 30%;
+  padding: 30px;
+  box-shadow: 0 5px 20px rgba(35, 36, 40, 1);
+}
+
+.times__date-title {
+  font-size: 24px;
+  font-weight: 700
 }
 
 .times__date {
   margin-top: 30px;
   font-size: 18px;
   font-weight: 500;
+  text-align: center;
 }
 
 .times__date-entry {
   margin-top: 20px;
-  max-width: 200px;
+  height: 33px;
   border-radius: 5px;
   border: 1px solid;
-  font-size: 16px;
+  font-size: 18px;
   outline: none;
   padding-left: 5px;
 }
 
 .times__btn {
   margin-top: 20px;
-  max-width: 200px;
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid;
+  border: 1px solid #939FA1;
   font-size: 18px;
-  background-color: rgb(235, 206, 155);
+  background-color: #939FA1;
+  color: #FFF;
   cursor: pointer;
 }
