--- a/homeworks/roman.buzukov_BuzRom/4-modules/css/style.css
+++ b/homeworks/roman.buzukov_BuzRom/4-modules/css/style.css
@@ -13,7 +13,6 @@ body {
 
 .container {
   max-width: 1200px;
-  height: calc(100vh - 100px);
   display: flex;
   justify-content: space-between;
   margin: 50px auto;
@@ -45,9 +44,9 @@ body {
 .container__list-select {
   margin-top: 20px;
   padding: 15px;
-  width: 350px;
   font-weight: 500;
   font-size: 1.3rem;
+  min-width: 200px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
   cursor: pointer;
@@ -58,7 +57,7 @@ body {
   appearance: none;
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAh0lEQVQ4T93TMQrCUAzG8V9x8QziiYSuXdzFC7h4AcELOPQAdXYovZCHEATlgQV5GFTe1ozJlz/kS1IpjKqw3wQBVyy++JI0y1GTe7DCBbMAckeNIQKk/BanALBB+16LtnDELoMcsM/BESDlz2heDR3WePwKSLo5eoxz3z6NNcFD+vu3ij14Aqz/DxGbKB7CAAAAAElFTkSuQmCC");
   background-repeat: no-repeat;
-  background-position: 320px center;
+  background-position: 95% center;
 }
 
 .item__text {
@@ -68,6 +67,7 @@ body {
 .container__block {
   padding: 20px 50px;
   height: 500px;
+  width: 40%;
   border: 1px solid rgb(0, 0, 0);
   position: relative;
 }
@@ -83,5 +83,18 @@ body {
 
 
 .container__block-time {
+  min-width: 160px;
   font-size: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+
+  .container {
+    flex-direction: column;
+  }
+
+  .container__block {
+    width: 100%;
+    margin-top: 30px;
+  }
 }
