--- a/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/style.css
@@ -41,7 +41,7 @@ body {
   font-size: 1.6em;
 }
 
-.control-button {
+.control__button {
   width: 200px;
   padding: 5px;
   border: 2px solid #000;
