--- a/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/style.css
@@ -10,51 +10,45 @@ body {
 }
 
 .main {
-  font-size: 28px;
-  border: 2px solid rgba(1, 1, 1, .6);
+  width: 100%;
+  border: 2px solid #676767;
   border-radius: 15px;
   display: flex;
-  flex-direction: row;
-}
-
-.main__left {
-  width: 50%;
-  height: 100%;
-  display: flex;
   flex-direction: column;
-  padding: 30px;
+  text-align: center;
 }
 
-
-.left__title {
-  margin: 0 0 20px;
+.main__title {
+  margin: 20px;
+  font-size: 35px;
 }
 
-.left__input {
+.main__input {
+  font-size: 30px;
+  width: 50%;
+  margin: 20px auto;
+  border: 1px solid #129F45;
+  border-radius: 5px;
+  transition: all .4s linear;
+}
+
+.main__input:focus {
+  color: #E487;
+}
+
+.main__button {
+  margin: 10px auto;
+  max-width: 50%;
   width: 300px;
-  font-size: inherit;
-  padding: 2px;
-  margin: 0 0 20px;
-}
-
-.left__input:focus {
-  background: rgba(111, 173, 168, .6);
-}
-
-.left__button {
-  width: 300px;
-  margin: 0 0 20px;
   padding: 5px;
   font-size: 25px;
   transition: all .5s linear;
 }
 
-.left__button:active {
-  background: rgb(98, 227, 250);
-}
-
-.left__result {
+.main__result {
   display: none;
   font-size: inherit;
-  margin: 0 0 20px 20px;
+  margin: 20px;
+  font-size: 24px;
+  text-align: center;
 }
