--- a/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/style.css
@@ -35,6 +35,12 @@ body {
   padding: 5px;
   border: 2px solid #000;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+.time-block__select:hover {
+  background-color: #E1EDFB;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
 }
 
 .clock {
@@ -46,6 +52,12 @@ body {
   padding: 5px;
   border: 2px solid #000;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+.control__button:hover {
+  background-color: #E1EDFB;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
 }
 
 .time-block__clock {
