--- a/homeworks/andrii.kholodenko_AndriiCold/4-modules/css/style.css
+++ b/homeworks/andrii.kholodenko_AndriiCold/4-modules/css/style.css
@@ -9,13 +9,16 @@
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   padding-top: 20px;
 }
 
-.button {
+.button,
+.input_date {
   font-size: inherit;
 }
 
-.input_date {
-  font-size: inherit;
+.text::first-letter {
+  text-transform: capitalize;
 }
