--- a/homeworks/andrii.revskyi_RevskyAndrey/4-modules/css/style.css
+++ b/homeworks/andrii.revskyi_RevskyAndrey/4-modules/css/style.css
@@ -21,21 +21,22 @@ body {
 }
 
 .form {
-  width: 70%;
   min-height: 500px;
   padding: 35px;
+  display: flex;
+  flex-direction: column;
 }
 
 .label {
   padding-right: 10px;
 }
 
-.data-input {
+.input {
   padding: 10px;
   margin-bottom: 45px;
 }
 
-.data-input:hover {
+.input:hover {
   cursor: pointer;
   border-radius: 5px;
   background: #00B500;
@@ -44,7 +45,7 @@ body {
 
 .btn {
   padding: 10px;
-  min-width: 220px;
+  min-width: 300px;
   margin-bottom: 15px;
   background: #EABD9B;
 }
@@ -63,37 +64,27 @@ body {
 }
 
 .time-box {
-  min-width: 30%;
   height: 300px;
   padding: 15px;
   border-left: 2px solid #CCC;
   border-bottom: 2px solid #CCC;
-  display: flex;
-  flex-direction: column;
   position: relative;
+  font-size: 40px;
 }
 
 .time-box::before {
   color: #F00;
-  font-size: 40px;
-  width: 25px;
-  height: 25px;
   content: "*";
   font-family: "Open Sans", sans-serif;
-  text-align: center;
   position: absolute;
   top: 0;
-  right: 0;
+  right: 10px;
 }
 
-.time {
-  font-size: 30px;
-  text-align: center;
-}
 
-.select {
+.time-box__select {
   padding: 10px;
   margin: 10px auto;
   text-align: center;
-  min-width: 170px;
+  min-width: 100%;
 }
