add fixes related to comments

--- a/homeworks/kostya.bublyk_ConstBagel/4-modules/css/style.css
+++ b/homeworks/kostya.bublyk_ConstBagel/4-modules/css/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.wrapper {
+.page-wrapper {
   width: 80%;
   height: 50%;
   margin: auto;
@@ -24,4 +24,10 @@
 .btn {
   width: 100%;
   min-height: 30px;
+}
+
+.btn:hover {
+  background-color: #3674E8;
+  color: #F4F4F4;
+  cursor: pointer;
 }
