corection name class

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/style.css
@@ -17,7 +17,7 @@ body {
   box-shadow: 0 0 0 5px rgba(0, 0, 0, .2);
 }
 
-.main__form {
+.main {
   margin-top: 20px;
   margin-left: 35px;
   display: flex;
