--- a/homeworks/roman.kushnirenko_skyprog/4-modules/style.css
+++ b/homeworks/roman.kushnirenko_skyprog/4-modules/style.css
@@ -2,7 +2,7 @@ body {
   box-sizing: border-box;
 }
 
-.all__date {
+.date__wrapper {
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -13,11 +13,11 @@ body {
   border: 1px solid rgb(160, 148, 148);
 }
 
-.date_name {
+.date__title {
   margin-top: 10px;
 }
 
-.show_result {
+.show__result {
   height: 10px;
   padding-top: 10px;
   text-align: center;
@@ -31,14 +31,14 @@ body {
   border-radius: 5px;
 }
 
-.getdate {
+.show__date {
   display: flex;
   flex-direction: column;
   width: 250px;
   row-gap: 20px
 }
 
-.showtime {
+.show__local__time {
   width: 200px;
   border: 1px solid rgb(7, 7, 7);
   height: 200px;
@@ -51,7 +51,7 @@ body {
   margin-bottom: 18px;
 }
 
-.local__time {
+.select__local__time {
   font-size: 17px;
   border-radius: 5px;
   background: rgb(252, 250, 250);
