--- a/homeworks/Aleksandr.Turuta_turuta7/4-flex/flex/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/4-flex/flex/style.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100vh;
+  height: 800px;
   display: flex;
   flex-direction: column;
   border: 3px solid #C14F4F;
@@ -25,7 +25,7 @@
 
 .main__center {
   height: 100%;
-  width: 100%;
+  flex-grow: 1;
   background: #699EBD;
 }
 
