--- a/homeworks/vladyslav.kovalov_kovalov/5-rxjs/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/5-rxjs/styles.css
@@ -92,6 +92,9 @@ body {
 
 .main-navigation {
   width: 100%;
+  max-height: 0;
+  overflow: hidden;
+  transition: all .5s ease-in-out;
 }
 
 .navigation-list {
@@ -150,6 +153,10 @@ body {
   display: none;
 }
 
+.opened-menu {
+  max-height: 600px;
+}
+
 @media (min-width: 500px) {
 
   .main-header__burger-button {
@@ -159,6 +166,7 @@ body {
   .main-navigation {
     width: auto;
     display: block;
+    max-height: 600px;
   }
 
   .navigation-list {
