fix dropdown transition

--- a/homeworks/vladyslav.kovalov_kovalov/5-rxjs/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/5-rxjs/styles.css
@@ -166,7 +166,7 @@ body {
   .main-navigation {
     width: auto;
     display: block;
-    max-height: 600px;
+    max-height: auto;
   }
 
   .navigation-list {
