--- a/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/scr/styles/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/5-rxjs/scr/styles/style.css
@@ -26,12 +26,25 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  animation: 1s linear show;
+  animation: .5s linear show;
   animation-fill-mode: forwards;
 }
 
+.header-afterBtn {
+  background: #59D9EA;
+  position: fixed;
+  top: 0;
+  left: auto;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 50px;
+}
+
 .header-hide {
-  animation: 1s linear hide;
+  animation: .5s linear hide;
   animation-fill-mode: forwards;
 }
 
