--- a/homeworks/oleksandr.prylutskiy_SanSandru4/5-rxjs/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/5-rxjs/style.css
@@ -10,14 +10,24 @@ body {
 }
 
 .section {
+  padding-bottom: 5px;
   width: 80%;
   height: 100%;
-  border: 1px solid #B3B1B1
+  border: 1px solid #B3B1B1;
 }
 
 .header {
+  width: 80%;
+  position: fixed;
   height: 40px;
   background-color: #000;
+  z-index: 3;
+  top: 0;
+  transition: transform .2s linear;
+}
+
+.header_hidden {
+  transform: translateY(-40px);
 }
 
 .header__nav {
@@ -52,6 +62,11 @@ body {
   color: #000;
 }
 
+.header__nav_menu_link:active {
+  background-color: #FFF;
+  color: #20AD70;
+}
+
 .header__nav .icon {
   display: none;
   color: #FFF;
@@ -60,20 +75,23 @@ body {
 
 @media screen and (max-width: 520px) {
   .header__nav .header__nav_menu_link { display: none; }
-  .header__nav a.icon { display: block;}
+  .header__nav a.icon { display: block; }
 }
 
 @media screen and (max-width: 520px) {
   .section { width: 100%; }
+  .header { width: 100%; }
+  .header_hidden { transform: translateY(-160px); }
   .header__nav { align-items: unset; background-color: #20AD70;}
   .header__nav_menu_link { background-color: #000; }
-  .header__nav_menu.responsive { position: absolute; left: 0; margin-top: 40px; width: 100%; display: flex; flex-direction: column;}
+  .header__nav_menu.responsive { position: absolute; left: 0; margin-top: 40px; width: 100%; display: flex; flex-direction: column; z-index: 2; }
   .header__nav_menu.responsive .icon { position: absolute; right: 0; top: -40px; }
   .header__nav_menu.responsive .header__nav_menu_link { display: block; text-align: left;}
 }
 
 .main {
-  width: 100%;
+  padding: 40px 15px;
   height: 100%;
-  padding: 10px;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
 }
