--- a/homeworks/roman.buzukov_BuzRom/5-rxjs/css/burger.css
+++ b/homeworks/roman.buzukov_BuzRom/5-rxjs/css/burger.css
@@ -9,7 +9,7 @@
 
 .header__main-burger::before,
 .header__main-burger::after,
-.header__main-burger span {
+.header__main-burger .header__main-burger-stick {
   position: absolute;
   left: 0;
   width: 100%;
@@ -32,21 +32,21 @@
   bottom: 0;
 }
 
-.header__main-burger span {
+.header__main-burger .header__main-burger-stick {
   top: 50%;
   transform: scale(1) translate(0, -50%);
 }
 
-.header__main-burger._active span {
+.header__main-burger--active .header__main-burger-stick {
   transform: scale(0) translate(0, -50%);
 }
 
-.header__main-burger._active::before {
+.header__main-burger--active::before {
   top: 50%;
   transform: rotate(-45deg) translate(0, -50%);
 }
 
-.header__main-burger._active::after {
+.header__main-burger--active::after {
   bottom: 50%;
   transform: rotate(45deg) translate(0, 50%);
 }
